force-app/main/default/objects/Prometheion_Audit_Package__c/Prometheion_Audit_Package__c.object-meta.xml
<CustomObject>
    <label>Prometheion Audit Package</label>
    <pluralLabel>Prometheion Audit Packages</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Audit Package Number</label>
        <displayFormat>AP-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores audit packages for compliance frameworks</description>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <type>Text</type>
        <length>255</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <label>Framework</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOX</fullName>
                </value>
                <value>
                    <fullName>SOC2</fullName>
                    <label>SOC 2</label>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>GLBA</fullName>
                </value>
                <value>
                    <fullName>NIST</fullName>
                    <label>NIST 800-53</label>
                </value>
                <value>
                    <fullName>ISO27001</fullName>
                    <label>ISO 27001</label>
                </value>
                <value>
                    <fullName>PCI_DSS</fullName>
                    <label>PCI-DSS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <required>true</required>
        <defaultValue>DRAFT</defaultValue>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>ARCHIVED</fullName>
                    <label>Archived</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Period_Start__c</fullName>
        <label>Audit Period Start</label>
        <type>Date</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Audit_Period_End__c</fullName>
        <label>Audit Period End</label>
        <type>Date</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Package_Metadata__c</fullName>
        <label>Package Metadata (JSON)</label>
        <type>LongTextArea</type>
        <length>131072</length>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Audit Packages Created</relationshipLabel>
        <relationshipName>Audit_Packages_Created</relationshipName>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Audit Packages Modified</relationshipLabel>
        <relationshipName>Audit_Packages_Modified</relationshipName>
    </fields>
</CustomObject>