force-app/main/default/objects/Prometheion_Audit_Package__c/fields/Audit_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Audit_Period_Start__c</fullName>
    <label>Audit Period Start</label>
    <type>Date</type>
    <required>true</required>
</CustomField>