force-app/main/default/objects/Prometheion_Audit_Package__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>SOC2</fullName>
                <label>SOC 2</label>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
            <value>
                <fullName>GLBA</fullName>
            </value>
            <value>
                <fullName>NIST</fullName>
                <label>NIST 800-53</label>
            </value>
            <value>
                <fullName>ISO27001</fullName>
                <label>ISO 27001</label>
            </value>
            <value>
                <fullName>PCI_DSS</fullName>
                <label>PCI-DSS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>