force-app/main/default/objects/Prometheion_Audit_Package__c/fields/Last_Generated__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated__c</fullName>
    <label>Last Generated</label>
    <type>DateTime</type>
</CustomField>