force-app/main/default/objects/Prometheion_Audit_Package__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>ARCHIVED</fullName>
                <label>Archived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>